frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: joke-app
    tier: frontend
spec:
  selector:
    app: joke-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: ClusterIP
